feat: 移除 Packet Fixer, 更新 README 启动命令, 升级至 0.1.0.2